@@ -5,7 +5,7 @@ Name=OSD Lyrics
 GenericName=Media Player
 Comment=Download and display lyrics, support multiple media players
 Comment[zh_CN]=支持多种播放器和自动下载歌词的桌面歌词秀
-Icon=
+Icon=osd-lyrics
 StartupNotify=true
 Terminal=false
 Type=Application
